packages/compiler/tests/fixtures/invalid/unknown-import.svelte
<script>
  import axios from 'axios'
</script>
<text>Nope</text>
